<resources>
    <string name="app_name">TMD Contacts App</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="emailFieldHint">Email</string>
    <string name="endIconEmailDescription">Email Address</string>
    <string name="login">Login</string>
    <string name="loginForgotPassword">Forgot Password?</string>
    <string name="loginOrText">OR</string>
    <string name="loginSignUpButton">SIGN UP HERE</string>
    <string name="loginAppLogoDescription">Application Logo</string>
    <string name="registryPasswordAgain">Password Again</string>
    <string name="registryEmailAddress">Email Address</string>
    <string name="registryPhoneNumber">Phone Number</string>
    <string name="registryWorkPhone">Work Phone</string>
    <string name="registryHomePhone">Home Phone</string>
    <string name="registryAddress">Address</string>
    <string name="registryCompany">Company</string>
    <string name="registryWorkTitle">Title</string>
    <string name="registryBirthday">Birthday</string>
    <string name="registryNotes">Notes</string>
    <string name="registryFirstName">First Name</string>
    <string name="registrySurname">Surname</string>
    <string name="registrySignUpButton">SIGN UP</string>
    <string name="addContactGroup">Groups</string>
    <string name="addContactGroupAutoFill">None</string>
    <string name="addContactAddButton">Add</string>
    <string name="forgottenPasswordText">FORGOT PASSWORD?</string>
    <string name="requestingEmail">Write your Email so we can send you the link to reset your password</string>
    <string name="sendLinkText">SEND THE LINK</string>
    <string name="updateButton">UPDATE</string>
    <string name="newGroupButton">Create a new group</string>
    <string name="profilePage">Profile</string>
    <string name="removeContact">Remove</string>
    <string name="contactsPage">Contacts</string>
    <string name="contactsSearchBar">Search</string>
    <string name="userProfileLogout">Logout</string>
    <string name="dialogHint">Write group name here</string>
    <string name="dialogPositive">ADD</string>
    <string name="dialogNegative">Cancel</string>
    <string name="resetPasswordLabel">Reset your password</string>
    <string name="resetPasswordDescription">Enter The New Password That You Want To Set</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="resetPasswordCodeHint">Enter The 4 Digit Code</string>
    <string name="editLabel">EDIT</string>
    <string name="callText">Call</string>
    <string name="detailsText">Detaıls</string>
</resources>